# Sexpansion-py

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: bench.py
examples/: 01_associativity.ipynb  01_associativity.py  02_commutativity_scan.ipynb  02_commutativity_scan.py  03_permutations_inverses.ipynb  03_permutations_inverses.py  04_isomorphisms.ipynb  04_isomorphisms.py  05_find_zero_scan.ipynb  05_find_zero_scan.py  06_find_resonances.ipynb  06_find_resonances.py  07_all_resonances_scan.ipynb  07_all_resonances_scan.py  08_adjoint_casimir.ipynb  08_adjoint_casimir.py  09_sl2_s991_expansion.ipynb  09_sl2_s991_expansion.py  10_sl2_scan_signatures.ipynb  10_sl2_scan_signatures.py
src/sexpansion/: __init__.py  _typing.py  algebra.py  database.py  expansion.py  permutation.py  reports.py  resonance.py  selector.py  semigroup.py
src/sexpansion/data/: README.txt
tests/: conftest.py  test_algebra.py  test_database.py  test_expansion.py  test_permutation.py  test_regression_java.py  test_reports.py  test_resonance.py  test_selector.py  test_semigroup.py
