[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sexpansion"
version = "1.0.0"
description = "S-expansions of Lie algebras with finite abelian semigroups"
readme = "README.md"
license = "GPL-3.0-only"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [
    { name = "Carlos Inostroza", email = "c.inostroza@gmail.com" },
]
keywords = ["lie-algebra", "semigroup", "s-expansion", "mathematical-physics"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
    "Typing :: Typed",
]
dependencies = ["numpy>=1.24"]

[project.urls]
Homepage = "https://github.com/SemigroupExp/Sexpansion-py"

[project.optional-dependencies]
dev = ["pytest>=8", "ruff", "mypy"]

[tool.hatch.build.targets.wheel]
packages = ["src/sexpansion"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "NPY", "RUF", "ANN"]
ignore = ["ANN401"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN"]
"examples/*" = ["ANN"]

[tool.mypy]
strict = true
files = ["src"]
python_version = "3.13"

[[tool.mypy.overrides]]
module = ["numpy", "numpy.*"]
ignore_missing_imports = false
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: long-running scans over the order-5/6 semigroup catalogues",
]
addopts = "-m 'not slow'"
